log/build_2025-08-19_13-34-30/crop_estimation/stderr.log
  File "/home/maffin21/loc_ws/install/crop_estimation/lib/python3.10/site-packages/crop_estimation/estimate_node.py", line 173
    speed = dz_mean し/ 0.3
                    ^^^
SyntaxError: invalid syntax

